<resources>
    <string name="app_name">NUMAD18S-ShuwanHuang</string>
    <string name="app_title">Shuwan Huang</string>
    <string name="button_about">About</string>
    <string name="button_error">Generate Error</string>
    <string name="button_dictionary">Dictionary</string>
    <string name="button_wordgame">Word Game</string>
    <string name="button_acknowledgements">Acknowledgements</string>
    <string name="button_logout">Logout</string>
    <string name="view_name">Shuwan Huang</string>
    <string name="view_email">huang.shuw@husky.neu.edu</string>
    <string name="view_year">1st year at NEU</string>
    <string name="view_id">Device ID</string>
    <string name="error">This is an example error in test mode</string>
    <string name="dictionary_activity_title">Test Dictionary</string>
    <string name="about_activity_title">About</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="button_clear">Clear</string>
    <string name="music_label">Music</string>
    <string name="long_app_name">Word Game: Scroggle</string>
    <string name="about_label">About</string>
    <string name="new_game_label">New Game</string>
    <string name="continue_label">Continue</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="scoreboard_label">Scoreboard</string>
    <string name="ok_label">OK</string>
    <string name="score_label">Score: %1$d</string>
    <string name="time_label">Time: %1$02d:%2$02d</string>
    <string name="show_score">Your score is %1$d. Thanks for playing!</string>
    <string name="about_text">\
        Scroggle stands for Scrambled Boggle. At the start of the game, a 9x9 grid with 9x9
        letters in the grid is displayed. Each smaller grid has been populated with
        9-letter words using Boggle rules (up/down/diagonal letters are connected).
        \n\
        In phase 1, which lasts for 1.5 min, you need to find the longest word in each
        Boggle board. Once the word is selected, the remaining letters in that grid disappear.
        \n\
        The game enters phase 2 after 1.5 min, or after you have done all 9 Boggle boards,
        depends on which one comes first. In phase 2, which also lasts for 1.5 min, you
        will pick one letter from each quadrant. You can revisit grids, but not back to
        back. The score you earn depends on the length of the word you build and the letters
        the word contains.
        \n\
        Enjoy!!!
    </string>
    <string name="acknowledgements_text">\
        Word Game Scrolling View Image (https://www.thesprucecrafts.com/
        scrabble-vowels-two-three-letter-words-412393)".
        \n\
        Ultimate Tic Tac Toe (UTTT) example in textbook Hello, Android 4th Edition
    </string>
    <string name="toast_move_to_phase_two">Phase 2</string>
    <string name="toast_find_valid_word">Found %1$s</string>
    <string name="toast_find_invalid_word">%1$s is not a word</string>
    <string name="toast_time_reminder">%1$d seconds left</string>
    <string name="toast_username_requirement">Username can only have letters and digits</string>

    <string name="button_login">Login</string>
    <string name="button_skip">Skip</string>
    <string name="login_hint">Please enter username</string>
    <string name="text_welcome">Hello, %1$s!</string>

    <string name="text_sort">Sort by</string>
    <string name="text_sort2">Score / Best Word</string>
</resources>
